--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,13 +1,15 @@
 apply plugin: 'com.android.application'
 apply plugin: 'kotlin-android'
 apply plugin: 'kotlin-android-extensions'
+apply plugin: 'com.google.gms.google-services'
+
 
 android {
     compileSdkVersion 29
     buildToolsVersion "29.0.3"
 
     defaultConfig {
-        applicationId "com.example.neomu_kotlin"
+        applicationId "com.app.neomu_kotlin"
         minSdkVersion 28
         targetSdkVersion 29
         versionCode 1
@@ -43,6 +45,7 @@ dependencies {
     implementation 'com.google.firebase:firebase-database:19.2.1'
     implementation 'com.google.firebase:firebase-config:19.1.1'
     implementation 'com.firebaseui:firebase-ui-database:4.3.0'
+    implementation 'com.google.firebase:firebase-analytics:17.2.2'
 
     // google map
 //    implementation 'com.google.android.gms:play-services-places:17.0.0'
@@ -55,7 +58,8 @@ dependencies {
     //new library
     implementation "org.jetbrains.anko:anko:$anko_version"
     implementation 'com.google.android.gms:play-services-maps:17.0.0'
-
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
+    implementation 'com.google.android.material:material:1.2.0-alpha05'
     // Retrofit, Gson, RxAdapter
 //    implementation 'com.squareup.retrofit2:retrofit:2.4.0'
 //    implementation 'com.squareup.retrofit2:converter-gson:2.4.0'
